Fri Mar 22 13:09:03 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/NSRulerView.h: Merged new code from Diego
	Kreutz (kreutz@inf.ufsm.br).
	* Source/NSRulerView.m: Class contributed by Diego Kreutz
	(kreutz@inf.ufsm.br).  I did some minor changes.
	
Fri Mar 22 11:40:44 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Model/IMLoading.m: Include AppKit/NSNibLoading.h for
	awakeFromNib.

Fri Mar 22 11:35:20 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m ([GSSimpleLayoutManager
	-setNeedsDisplayForLineRange:inTextContainer:]): Check that the
	whole range of lines, not just the first one, is in the range we
	know about (Suggestion from Alexander Malmberg).

2002-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/exampleInfo.plist: Fix illegal character in plist ...
	use unicode escape.  Bug reported by Yen-Ju Chen

2002-03-22  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSOutlineView.h
	Moved NSOutlineViewDropOnItemIndex from enum to int.
	* Source/NSOutlineView.m:
	Drag'n'drop support.
	* Source/NSTableView.m 
	([NSTableView -selectRow:byExtendingSelection:]): 
	rowIndex == _numberOfRows was not catched as invalid.
	* Source/NSTableView.m ([NSTableView -draggingUpdated:sender]): 
	Less NSLog.
	* Source/NSTableHeaderView.m ([NSTableHeaderView -mouseDown:]):
	fixed drawing issue.
	
2002-03-21  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSEvent.m 
	([NSEvent +startPeriodicEventsAfterDelay:withPeriod:]): 
	([NSEvent +_registerRealTimer:]):
	The first periodic event is sent after delay seconds.
	It was incorrectly sent after delay+period seconds.
	* Source/NSScroller.m ([NSScroller -drawParts]): 
	Set the scrollbuttons to send actions on mouseDown instead of
	mouseUp. Changed the initial delay (to reflect NSEvent changes)
	and the period so that it feels smoother.
	
2002-03-20  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Use info from make package, and look in GNUstep